--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,47 @@
 <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-          <div class="container-fluid">
+	<div class="navbar-inner">
+    	<div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Audiolist</a>
+          <%= link_to 'Audiovity', root_path, :class => "brand"%>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-                <li><%= link_to "Link1", "/path1"  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
+                <li class='active'><%= link_to "Home", "#"  %></li>
+                <li><%= link_to "Music", "#"  %></li>
+                <li><%= link_to "About", "#"  %></li>
+            </ul>
+			<form class='navbar-search pull-left'>
+				<input class='search-query span4' type='text' placeholder='search music' />
+			</form>
+			<ul class="nav pull-right">
+                <% if current_user.nil? %>
+					<li><%= link_to 'Login', new_user_session_path  %></li>
+					<li class='divider-vertical'></li>
+					<li><button class='btn btn-primary'>Signup</button>
+					</li>
+				<% else %>
+					<li class='padding_config_top_up'>welcome <font class='blue_text'><%= current_user.first_name %> <%= current_user.last_name %></font></li>
+					<li class='divider-vertical'></li>
+					<li>
+		              	<ul class="nav">
+					    	<li class="dropdown">
+					    		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dashboard <b class="caret"></b></a>
+							    <ul class="dropdown-menu">
+							    	<li></li>
+							    	<li><a>Playlist</a></li>
+							    	<li><a>Setting</a></li>
+							    	<li class="divider"></li>
+							    	<li><%= link_to 'Signout', destroy_user_session_path, :method => :delete %></li>
+							    </ul>
+					    	</li>
+					    </ul>
+	              	</li>
+				<% end %>
             </ul>
           </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    	</div>
+	</div>
+</div>
