--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audiolist</title>
-    <%= csrf_meta_tags %>
-
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
@@ -14,20 +12,26 @@
     <!-- Le styles -->
     <%= stylesheet_link_tag "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
     <!-- Le fav and touch icons -->
     <link href="images/favicon.ico" rel="shortcut icon">
   </head>
   <body>
-	<%= render 'layouts/header'%>
+	<%= render 'layouts/header' %>
     <div class="container-fluid">
+		<div class='row-fluid'>
+			<div class='span12'>
+				<% if flash[:notice] %>
+					<div class='alert alert-success'><%= flash[:notice]%></div>
+				<% elsif flash[:alert] %>
+					<div class='alert alert-error'><%= flash[:alert]%></div>
+				<% elsif flash[:info] %>
+					<div class='alert alert-info'><%= flash[:info]%></div>
+				<% end %>
+			</div>
+		</div>
     	<%= yield %>
     	<%= render 'layouts/footer' %>
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
-
   </body>
 </html>
