--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,50 @@
-
+<div class="row-fluid">
+	<div class="span1">&nbsp;</div>
+	<div class="span10">
+		<div class="well back_well back_up">
+			<div class="row-fluid">
+				
+			</div>
+			<hr />
+			<div class="row-fluid" style="height: 200px;">
+				<div class="span4">
+					<h4>Upload you music</h4>
+					<p>
+						upload lagu kesukaan atau band anda. 
+					</p>
+				</div>
+				<div class="span4">
+					<h4>Create your playlist</h4>
+					<p>
+						buat playlist anda
+					</p>
+				</div>
+				<div class="span4">
+					<h4>Listen online radio</h4>
+					<p>
+						dengarkan music secara online
+					</p>
+				</div>
+			</div>
+			<br />
+			<div class="row-fluid" style="height: 200px;">
+				<div class="span6">
+					<div class="well">
+						<h4>make more closer to your fans</h4>
+					</div>
+				</div>
+				<div class="span6">
+					<div class="well">
+						<h4>Listen your playlist on mobile phone</h4>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid" style="height: 150px;">
+				<div class="span12">
+					<p class="white_text">AUDIOLIST is created by </p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="span1">&nbsp;</div>
+</div>
