--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap_and_overrides
+ *= require blue.monday/jplayer.blue.monday
 */
 
 /* body and base style */
@@ -50,6 +51,14 @@ span.help-inline{
 	width: 95%;
 }
 
+.full-tab{
+	width: 100%;
+}
+
+
+.align-right{
+	text-align: right;
+}
 .padding_config_top_up{
 	padding-top: 9px;
 }
@@ -65,4 +74,65 @@ span.help-inline{
 
 #user_time_zoned{
 	width: 307px;
+}
+
+.jp-playlist{
+	display: none;
+	position: absolute;
+}
+
+/* audio */
+.playlist-audio{
+	float: left;
+	width: 50%;
+	margin-bottom: 10px;
+}
+
+.jp-control{
+	list-style: none;
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+}
+
+.jp-control li a{
+	float: left;
+	width: 100px;
+	height: 100px;
+	border: solid 1px #dcd9d9;
+	background-image: none;
+}
+
+a.jp-play.background-none{
+	background-image: none;
+}
+
+a.jp-play.background-none:hover{
+	background: white;
+	opacity:0.4;
+	filter:alpha(opacity=40);
+}
+
+a.jp-pause.background-none{
+	background: white;
+}
+
+a.jp-pause.background-none:hover{
+	background-image: none;
+}
+
+.playlist-info{
+	float:left;
+}
+
+.playlist-info-sub{
+	float:left;
+	width: 100%;
+}
+
+.border-image{
+	border: solid 1px #dcd9d9;
+	margin-right: 5px;
+	float:left;
+	position: relative;
 }
