--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,20 +9,68 @@
           <%= link_to 'Audiovity', root_path, :class => "brand"%>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-                <li class='active'><%= link_to "Home", root_path  %></li>
-                <li><%= link_to "Music", "#"  %></li>
+                <li <%= "class='active'" if @title == 'Home' %> ><%= link_to "Home", root_path  %></li>
+                <li <%= "class='active'" if @title == 'My Musics' || @title == 'Musics'  %>><%= link_to "Music", "#"  %></li>
                 <li><%= link_to "About", "#"  %></li>
             </ul>
-			<form class='navbar-search pull-left'>
-				<input class='search-query span4' type='text' placeholder='search music' />
-			</form>
-			<ul class="nav pull-right">
-                <% if current_user.nil? %>
+			<% if current_user.nil? %>
+				<ul class="nav pull-right">
 					<li><%= link_to 'Login', new_user_session_path  %></li>
 					<li class='divider-vertical'></li>
 					<li><button class='btn btn-primary'>Signup</button>
 					</li>
-				<% else %>
+				</ul>
+			<% else %>
+				<ul class="nav" style="width: 55%">
+					<div id="jquery_jplayer_2" class="jp-jplayer"></div>
+
+					<div id="jp_container_2" class="jp-audio">
+						<div class="jp-type-playlist">
+							<div class="jp-gui jp-interface">
+								<ul class="jp-controls">
+									<li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
+									<li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+									<li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+									<li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
+									<li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
+									<li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+									<li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+									<li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+								</ul>
+								<div class="jp-progress">
+									<div class="jp-seek-bar">
+										<div class="jp-play-bar"></div>
+									</div>
+								</div>
+								<div class="jp-volume-bar">
+									<div class="jp-volume-bar-value"></div>
+								</div>
+								<div class="jp-time-holder">
+									<div class="jp-current-time"></div>
+									<div class="jp-duration"></div>
+								</div>
+								<ul class="jp-toggles">
+									<li><i class="icon-search" style="margin-left: 10px" id="lihat"></i></li>
+									<li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
+									<li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
+									<li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
+									<li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
+									
+								</ul>
+							</div>
+							<div class="jp-playlist">
+								<ul>
+									<li></li>
+								</ul>
+							</div>
+							<div class="jp-no-solution">
+								<span>Update Required</span>
+								To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+							</div>
+						</div>
+					</div>
+				</ul>
+				<ul class="nav pull-right">
 					<li class='padding_config_top_up'>
 						<% if current_user.profile_picture? %> 
 							<%= image_tag(current_user.profile_picture.thumb) %>
@@ -37,7 +85,7 @@
 					    	<li class="dropdown">
 					    		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dashboard <b class="caret"></b></a>
 							    <ul class="dropdown-menu">
-							    	<li></li>
+							    	<li><%= link_to "My Audio", myaudios_audios_path %></li>
 							    	<li><a>Playlist</a></li>
 							    	<li><%= link_to "setting profile", edit_user_registration_path %></li>
 							    	<li class="divider"></li>
