--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,42 +21,41 @@
 					</li>
 				</ul>
 			<% else %>
-				<ul class="nav" style="width: 55%">
-					<div id="jquery_jplayer_2" class="jp-jplayer"></div>
-
-					<div id="jp_container_2" class="jp-audio">
+				<ul class="nav" style="width: 700px;">
+					<div id="jp_container_N">
 						<div class="jp-type-playlist">
-							<div class="jp-gui jp-interface">
-								<ul class="jp-controls">
-									<li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
-									<li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
-									<li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
-									<li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
-									<li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
-									<li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
-									<li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
-									<li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
-								</ul>
-								<div class="jp-progress">
-									<div class="jp-seek-bar">
-										<div class="jp-play-bar"></div>
+							<div id="jquery_jplayer_N" class="jp-jplayer"></div>
+							<div class="jp-gui">
+								<div class="jp-interface">
+									<div class="jp-controls-holder">
+										<ul class="jp-controls">
+											<li><a class="jp-previous" tabindex="1" href="javascript:;">previous</a></li>
+											<li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+											<li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+											<li><a class="jp-next" tabindex="1" href="javascript:;">next</a></li>
+										</ul>
+										<div class="jp-progress">
+											<div class="jp-seek-bar">
+												<div class="jp-play-bar"><span></span></div>
+											</div>
+										</div>
+										<ul class="timer">
+											<li class="jp-current-time">00:00</li>
+											<li>/</li>
+											<li class="jp-duration">00:00</li>
+										</ul>
+										<ul class="jp-controls-sound">
+											<li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+											<li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+										</ul>
+										<div class="jp-volume-bar">
+											<div class="jp-volume-bar-value"><span class="handle"></span></div>
+										</div>
+										<ul class="jp-controls-playlist">
+											<li class="jp-playing"><i id="show_playlist" class="icon-list-alt icon-white" ></i></li>
+										</ul>
 									</div>
 								</div>
-								<div class="jp-volume-bar">
-									<div class="jp-volume-bar-value"></div>
-								</div>
-								<div class="jp-time-holder">
-									<div class="jp-current-time"></div>
-									<div class="jp-duration"></div>
-								</div>
-								<ul class="jp-toggles">
-									<li><i class="icon-search" style="margin-left: 10px" id="lihat"></i></li>
-									<li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
-									<li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
-									<li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
-									<li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
-									
-								</ul>
 							</div>
 							<div class="jp-playlist">
 								<ul>
@@ -69,7 +68,9 @@
 							</div>
 						</div>
 					</div>
+					
 				</ul>
+				<%= render 'audios/myplaylist' %>
 				<ul class="nav pull-right">
 					<li class='padding_config_top_up'>
 						<% if current_user.profile_picture? %> 
